--- a/ImageClassification_cifar.ipynb
+++ b/ImageClassification_cifar.ipynb
@@ -18,6 +18,13 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Classification of Images in the CIFAR-10 Dataset using CNNs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
