--- a/cifar_simple.ipynb
+++ b/cifar_simple.ipynb
@@ -509,10 +509,10 @@
     }
    ],
    "source": [
-    "#using a confusion matrix to visualizze the accuracy of the predictions \n",
+    "#using a confusion matrix to visualize the accuracy of the predictions \n",
     "#each point on the matrix indicates the correct class by the row and the predicted value by the column \n",
     "#points along the diagonal indicate the number of correct predictions \n",
-    "#other points on the matrix indicate how manyh images were classified incorrectly\n",
+    "#other points on the matrix indicate how many images were classified incorrectly\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "cm = confusion_matrix(y_test, prediction)\n",
